--- a/src/renderer/components/shared/forms.module.scss
+++ b/src/renderer/components/shared/forms.module.scss
@@ -127,6 +127,7 @@
 
   button {
     width: 100%;
+    justify-content: center;
   }
 }
 
